x.y.z
=====

Release date:

New features:

* Render lines in a ListView instead of manually managed objects
  - This is a big and fundamental refactoring effort and makes scrolling
    way smoother also on older Qt version. Also the update logic is now less
    prone to bugs as more stuff is handled by the view model in C++.

Bug fixes:

Other:

0.8.0
=====

Release date:

Thu, 29 May 2025 21:04:33 +0300

New features:

* Add menu action to stop all notes

Bug fixes:

* When stopping all notes, stop only the notes that are actually playing
  - Noticed that e.g. Behringer Solina Ensemble goes crazy if a bunch of
    non-playing notes are stopped

* Fix incorrect call to _createLines()

Other:

* CMake: Move Debian packaging to cmake/DebianPackagingDefaultQt.cmake

0.7.0
=====

Release date:

Sat, 24 May 2025 22:17:33 +0300

New features:

* Add an example project file

* Immediately update recent files on save as and save as template

* Set status bar message when automations added

* Implement basic Pitch Bend automations with linear interpolation
  - Select lines => Right click => Add Pitch Bend automation
  - Edit via Right click => Edit Pitch Bend automations

* Make it possible to force window size with --window-size

* Implement filtering for MIDI CC automations
  - Context Menu => Pattern/Track/Column => Edit MIDI CC automations

* Implement deletion of MIDI CC automations

* Implement enabling/disabling of MIDI CC automations

* Optimize the performance of MIDI CC automation edits

* Implement basic MIDI CC automations with linear interpolation
  - Select lines => Right click => Add Midi CC automation
  - Edit via Right click => Edit MIDI CC automations

* Clear selection on left-click

* Improve tool tips on velocity scales

* Implement on-the-fly transposition via instrument settings

Bug fixes:

* Fix saving of deleted muted/soloed tracks/columns

* Fix inversion of muted/soloed tracks/columns
