@@ -109,6 +109,7 @@ Item {
                     to: 100
                     value: 0
                     editable: true
+                    enabled: startLine() !== endLine()
                     Keys.onReturnPressed: {
                         focus = false;
                     }
