@@ -26,6 +26,30 @@ Menu {
             enabled: !UiService.isPlaying()
             onTriggered: UiService.requestLineDelayDialog()
         }
+        MenuSeparator {
+        }
+        Action {
+            text: qsTr("Add MIDI CC automation")
+            enabled: !UiService.isPlaying()
+            onTriggered: UiService.requestLineAddMidiCcAutomationDialog()
+        }
+        Action {
+            text: qsTr("Edit MIDI CC automations")
+            enabled: !UiService.isPlaying()
+            onTriggered: UiService.requestEditMidiCcAutomationsDialogByLine()
+        }
+        MenuSeparator {
+        }
+        Action {
+            text: qsTr("Add Pitch Bend automation")
+            enabled: !UiService.isPlaying()
+            onTriggered: UiService.requestLineAddPitchBendAutomationDialog()
+        }
+        Action {
+            text: qsTr("Edit Pitch Bend automations")
+            enabled: !UiService.isPlaying()
+            onTriggered: UiService.requestEditPitchBendAutomationsDialogByLine()
+        }
         delegate: MainMenuItemDelegate {
         }
     }
